Sat Dec 17 03:57:01 2005  Tanaka Akira  <akr@m17n.org>

	* bignum.c (rb_big_rshift): fix a GC problem on
	  IA64 with gcc 4.0.3 20051216 (prerelease).

Sat Dec 17 03:30:23 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (bmcall): fix a GC problem by tail call on
	  IA64 with gcc 4.0.3 20051216 (prerelease).

Fri Dec 16 17:53:45 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/syck/rubyext.c (rb_syck_compile): fixed memory leak.

	* ext/syck/rubyext.c: should protect global variable from GC.

Fri Dec 16 11:44:43 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/syck/rubyext.c (syck_resolver_tagurize): fixed memory leak.

	* ext/syck/rubyext.c (syck_node_type_id_set): should set newly
	  allocated memory instead of RString's internal storage.

	* ext/syck/rubyext.c (syck_scalar_value_set): ditto.

	... these fixes won't fix [ruby-dev:27839]. more work is needed.

Thu Dec 15 12:35:14 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/tmpdir.rb: merged RDoc patch from Eric Hodel <drbrain at
	  segment7.net>.  [ruby-core:06894]

Thu Dec 15 01:33:31 2005  Tanaka Akira  <akr@m17n.org>

	* ext/zlib/zlib.c (zstream_run): fix a GC problem by tail call on
	  x86_64 with gcc 4.0.3 20051111 (prerelease) (Debian 4.0.2-4)

Wed Dec 14 23:50:20 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_c.rb (find_class_comment): fix for class
	  document with prototypes.  [ruby-core:06863]

Wed Dec 14 23:39:53 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (has_magic): glob names contain alphabets to enable case fold
	  search.  [ruby-dev:27735]

	* dir.c (Init_Dir): FNM_SYSCASE which is default case fold flag.
	  [ruby-dev:23296]

Wed Dec 14 12:01:26 2005  Tanaka Akira  <akr@m17n.org>

	* marshal.c (r_object0): fix a GC problem for reading a bignum on
	  IA64 with gcc 3.3.5 (Debian 1:3.3.5-13).

Tue Dec 13 12:23:47 2005  Tanaka Akira  <akr@m17n.org>

	* re.c (rb_reg_regcomp): fix a GC problem on x86_64 with
	  gcc 3.3.5 (Debian 1:3.3.5-13).
